syntax = "proto3";

package auth.v1;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
  string full_name = 1;
  string phone_number = 2;
  string email = 3;
  string password = 4;
}

message RegisterResponse {
  string msg = 1;
  string status = 2;
}
